# cirkulaer

./: Cargo.toml  README.md  rustfmt.toml
.githooks/: install.sh  pre-commit.sh
.github/workflows/: ci.yml
benches/: addition_assignment.rs
examples/: basic.rs  circular_buffer.rs  ring_buffer.rs
scripts/: build-all-targets.sh  check-coverage.sh  check-example-in-readme-file.sh  check-formatting.sh  generate-all-documentation.sh  generate-documentation.sh  generate-public-documentation.sh  measure-code-coverage.sh  pre-push.sh  run-all-benchmarks.sh  run-all-examples-under-miri.sh  run-all-examples.sh  run-all-tests-under-miri.sh  run-all-tests.sh  run-clippy.sh
src/: circular_index.rs  error.rs  lib.rs  trait_bound.rs
tests/: circular_index.rs  integration_tests.rs  value_error.rs
