[[bench]]
name = "addition_assignment"
harness = false

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"

[lints.clippy]
all = "deny"
cargo = "deny"
nursery = "deny"
pedantic = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[package]
categories = ["rust-patterns"]
description = "Provides a circular index type for circular indexing into primitive, fixed-size arrays."
edition = "2024"
keywords = ["array", "circular", "index", "indices"]
license = "MIT OR Apache-2.0"
name = "cirkulaer"
repository = "https://github.com/satflaesk/cirkulaer"
version = "0.1.0"
